[package]
name = "version-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-client = "0.17.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
serde_yaml = "0.9.34"
semver = { version = "1.0.28", features = ["serde"] }
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
rustls = { version = "0.23", default-features = false }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
